Mon May 20 17:15:32 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* t_shs.c (main): Don't do timing tests; it takes too long!

Tue May 14 17:09:36 1996  Richard Basch  <basch@lehman.com>

	* .Sanitize: reflect current files
	* Makefile.in: added hmac-sha
	* hmac_sha.c: implement HMAC-SHA
	* sha_crypto.c: use hmac-sha
	* sha_glue.c: sanity check the passed in checksum length
	* shs.h: replaced sha-des3 with hmac-sha

Fri May 10 11:19:53 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* shs.c (longReverse): Remove extraneous \.
		(expand): Start #define in first column.

Fri May 10 01:19:18 1996  Richard Basch  <basch@lehman.com>

	* Makefile.in configure.in t_shs.c sha_glue.c sha_crypto.c shs.c shs.h:
	Initial check-in of the functions to support the NIST FIPS 180
	SHA algorithm.  Provide interfaces for cksum-sha, cksum-sha-des3.
	(enctype-des3-sha is also being defined)