@@ -1,3 +1,9 @@
+Thu Jun  6 15:43:26 1996  Theodore Y. Ts'o  <tytso@mit.edu>
+
+	* shs.c (longReverse): Don't use htonl(); it doesn't exist under
+		Windows.  Instead do the test by casting a pointer to an
+		integer to a char *.
+
 Mon May 20 17:15:32 1996  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* t_shs.c (main): Don't do timing tests; it takes too long!
